--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "stylelint": "9.10.x",
     "stylelint-config-htmlacademy": "0.1.x",
     "stylelint-scss": "^3.19.0",
-    "webpack": "4.41.5",
-    "webpack-cli": "3.3.11",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "3.10.3",
     "write-file-webpack-plugin": "4.5.1"
   },
